# aoc-2023

./: .gitignore  README.md  new.sh
.github/workflows/: make.yml
1/: Makefile  README.md  go.mod
1/src/: main.go  solution.go  solution_test.go
2/: Makefile  README.md  pyproject.toml
2/src/: main.ipynb
3/: .gitignore  README.md  pyproject.toml
3/src/: main.ipynb
4/: Makefile  README.md  go.mod
4/cmd/4/: main.go  solution.go
